<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/catbg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SuccessText"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:text="@string/successMessage" />

    <ImageView
        android:id="@+id/catPic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/successDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/HelloText"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:text="@string/detailMessage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/againButton"
            android:layout_width="170dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:theme="@style/ActionButton"
            android:text="@string/againText"/>

        <Button
            android:id="@+id/doneButton"
            android:layout_width="170dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:theme="@style/ActionButton2"
            android:text="@string/doneText"/>

    </LinearLayout>



</LinearLayout>