<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <!-- Profile -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                style="@style/SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profilePartLabel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_margin="10dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fullnameText"
                        style="@style/SettingsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/fullnamePlaceholder" />

                    <TextView
                        android:id="@+id/usernameText"
                        style="@style/SettingsDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/usernamePlaceholder" />
                </LinearLayout>

                <Button
                    android:id="@+id/signOutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signOutButton"
                    android:theme="@style/MyButton" />
            </LinearLayout>

        </LinearLayout>

        <View style="@style/SectionDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                style="@style/SectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gameSettings" />

            <Button
                android:id="@+id/reset"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:theme="@style/MyButton"
                android:text="reset list"/>

        </LinearLayout>

        <View style="@style/SectionDivider" />

        <!-- Preferences -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="3dp"
            android:orientation="vertical">

            <TextView
                style="@style/SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/preferencesPartLabel" />

            <android.support.v7.widget.ContentFrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="280dp"/>


        </LinearLayout>


    </LinearLayout>
</ScrollView>