<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout">

    <ImageView
        android:id="@+id/playImage"
        android:layout_width="360dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/kittycollector"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/helloText"
        style="@style/HelloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/helloMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playImage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/scoreText"
        style="@style/ScoreTracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/scoreTrack"
        app:layout_constraintTop_toBottomOf="@id/helloText"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/playButton"
        android:layout_width="380dp"
        android:layout_height="65dp"
        android:layout_margin="5dp"
        android:text="@string/playButton"
        android:theme="@style/ActionButton"
        app:layout_constraintTop_toBottomOf="@id/scoreText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>